--- a/Login.html
+++ b/Login.html
@@ -24,3 +24,31 @@
     </section>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Connexion ChronoDem</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Bienvenue sur ChronoDem</h1>
+    </header>
+
+    <section>
+        <h2>Connexion</h2>
+        <form action="#">
+            <label for="code">Code d'accès :</label>
+            <input type="password" id="code" name="code" required>
+            <button type="submit">Se connecter</button>
+        </form>
+    </section>
+
+    <footer>
+        <a href="index.html">Retour à l'accueil</a> <!-- Lien vers la page d'accueil -->
+        <a href="calendar.html">Voir le calendrier</a> <!-- Lien vers la page calendrier -->
+    </footer>
+</body>
+</html>
