Page d'Accueil.html

--- a/Page d'Accueil.html
+++ b/Page d'Accueil.html
@@ -30,3 +30,27 @@
     </footer>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accueil ChronoDem</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Bienvenue sur ChronoDem</h1>
+    </header>
+
+    <section>
+        <h2>Pages disponibles :</h2>
+        <ul>
+            <li><a href="login.html">Page de connexion</a></li>
+            <li><a href="calendar.html">Calendrier</a></li>
+            <li><a href="hebdomadaire.html">Compte Hebdomadaire</a></li>
+            <li><a href="client-info.html">Informations Client</a></li>
+        </ul>
+    </section>
+</body>
+</html>
