--- a/Calendrier.html
+++ b/Calendrier.html
@@ -43,3 +43,26 @@
         <nav>
             <ul>
                 <li><a href="index.html" sty
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calendrier ChronoDem</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Calendrier ChronoDem</h1>
+    </header>
+
+    <section>
+        <h2>Calendrier</h2>
+        <p>Ici, tu pourras voir le calendrier avec les jours, les événements et les options pour les gérer.</p>
+    </section>
+
+    <footer>
+        <a href="login.html">Se déconnecter</a>
+    </footer>
+</body>
+</html>
