--- a/Hebdomadaire.html
+++ b/Hebdomadaire.html
@@ -42,3 +42,26 @@
     </section>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Compte Hebdomadaire ChronoDem</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Compte Hebdomadaire ChronoDem</h1>
+    </header>
+
+    <section>
+        <h2>Enregistrement des heures et montants</h2>
+        <p>Ici, tu pourras enregistrer les heures et montants des ouvriers sur une base hebdomadaire.</p>
+    </section>
+
+    <footer>
+        <a href="login.html">Se déconnecter</a>
+    </footer>
+</body>
+</html>
