--- a/Information clients.html
+++ b/Information clients.html
@@ -54,3 +54,39 @@
     </section>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Informations Client ChronoDem</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Informations Client ChronoDem</h1>
+    </header>
+
+    <section>
+        <h2>Saisir les informations client</h2>
+        <form action="#">
+            <label for="client-name">Nom :</label>
+            <input type="text" id="client-name" name="client-name" required>
+
+            <label for="client-phone">Téléphone :</label>
+            <input type="text" id="client-phone" name="client-phone" required>
+
+            <label for="client-email">Email :</label>
+            <input type="email" id="client-email" name="client-email" required>
+
+            <!-- Ajouter plus de champs ici... -->
+
+            <button type="submit">Envoyer</button>
+        </form>
+    </section>
+
+    <footer>
+        <a href="calendar.html">Retour au calendrier</a>
+    </footer>
+</body>
+</html>
