--- a/Calendrier.html
+++ b/Calendrier.html
@@ -50,7 +50,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendrier ChronoDem</title>
     <link rel="stylesheet" href="style.css">
-</head>
+</head><link rel="stylesheet" href="style.css">
 <body>
     <header>
         <h1>Calendrier ChronoDem</h1>
@@ -64,5 +64,6 @@
     <footer>
         <a href="login.html">Se déconnecter</a>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
