--- a/Hebdomadaire.html
+++ b/Hebdomadaire.html
@@ -49,7 +49,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compte Hebdomadaire ChronoDem</title>
     <link rel="stylesheet" href="style.css">
-</head>
+</head><link rel="stylesheet" href="style.css">
 <body>
     <header>
         <h1>Compte Hebdomadaire ChronoDem</h1>
@@ -63,5 +63,6 @@
     <footer>
         <a href="login.html">Se déconnecter</a>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
