Information clients.html

--- a/Information clients.html
+++ b/Information clients.html
@@ -61,7 +61,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informations Client ChronoDem</title>
     <link rel="stylesheet" href="style.css">
-</head>
+</head><link rel="stylesheet" href="style.css">
 <body>
     <header>
         <h1>Informations Client ChronoDem</h1>
@@ -88,5 +88,6 @@
     <footer>
         <a href="calendar.html">Retour au calendrier</a>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
