--- a/Login.html
+++ b/Login.html
@@ -31,7 +31,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion ChronoDem</title>
     <link rel="stylesheet" href="style.css">
-</head>
+</head><link rel="stylesheet" href="style.css">
 <body>
     <header>
         <h1>Bienvenue sur ChronoDem</h1>
@@ -50,5 +50,6 @@
         <a href="index.html">Retour à l'accueil</a> <!-- Lien vers la page d'accueil -->
         <a href="calendar.html">Voir le calendrier</a> <!-- Lien vers la page calendrier -->
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
