Page d'Accueil.html

--- a/Page d'Accueil.html
+++ b/Page d'Accueil.html
@@ -32,14 +32,14 @@
 </html>
 <!DOCTYPE html>
 <html lang="fr">
-<head>
+<head><link
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil ChronoDem</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header><link rel="stylesheet" href="style.css">
         <h1>Bienvenue sur ChronoDem</h1>
     </header>
 
@@ -52,5 +52,6 @@
             <li><a href="client-info.html">Informations Client</a></li>
         </ul>
     </section>
+    <script src="script.js"></script>
 </body>
 </html>
