--- a/Calendrier.html
+++ b/Calendrier.html
@@ -9,34 +9,18 @@
 <body>
     <header>
         <h1>Calendrier ChronoDem</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Page d'Accueil</a></li> <!-- Vérifie que index.html existe bien -->
-                <li><a href="login.html">Se déconnecter</a></li> <!-- Vérifie que login.html existe bien -->
-            </ul>
-        </nav>
     </header>
 
     <section>
         <h2>Calendrier</h2>
         <p>Ici, tu pourras voir le calendrier avec les jours, les événements et les options pour les gérer.</p>
-        <div class="calendar">
-            <!-- Exemple de calendrier, à adapter avec le code dynamique pour afficher les dates -->
-            <div>Lun</div>
-            <div>Mar</div>
-            <div>Mer</div>
-            <div>Jeu</div>
-            <div>Ven</div>
-            <div>Sam</div>
-            <div>Dim</div>
-            <!-- Ajoute les cases du calendrier ici -->
-        </div>
     </section>
 
     <footer>
         <a href="login.html">Se déconnecter</a>
     </footer>
 
-    <script src="script.js"></script> <!-- Lien vers le fichier JavaScript -->
+    <!-- Lier le fichier JavaScript -->
+    <script src="script.js"></script> <!-- Lien vers le fichier JS -->
 </body>
 </html>
