--- a/Login.html
+++ b/Login.html
@@ -3,53 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChronoDem - Accueil</title>
-    <!-- Ajoute ton CSS ici -->
+    <title>Login ChronoDem</title>
+    <link rel="stylesheet" href="style.css"> <!-- Lien vers le fichier CSS -->
 </head>
-<body style="background-color: #121212; color: #fff; font-family: Arial, sans-serif;">
-    <header>
-        <h1>Bienvenue sur ChronoDem</h1>
-        <nav>
-            <ul>
-                <li><a href="login.html" style="color: #00bcd4; text-decoration: none;">Se connecter</a></li>
-                <li><a href="calendar.html" style="color: #00bcd4; text-decoration: none;">Calendrier</a></li>
-                <li><a href="account.html" style="color: #00bcd4; text-decoration: none;">Compte Hebdomadaire</a></li>
-                <li><a href="client-info.html" style="color: #00bcd4; text-decoration: none;">Informations Client</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section>
-        <h2>Bienvenue sur le site de gestion ChronoDem</h2>
-        <p>Veillez à vous connecter avant d'accéder aux autres pages.</p>
-    </section>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connexion ChronoDem</title>
-    <link rel="stylesheet" href="style.css">
-</head><link rel="stylesheet" href="style.css">
 <body>
     <header>
-        <h1>Bienvenue sur ChronoDem</h1>
+        <h1>Se connecter à ChronoDem</h1>
     </header>
 
     <section>
-        <h2>Connexion</h2>
-        <form action="#">
-            <label for="code">Code d'accès :</label>
-            <input type="password" id="code" name="code" required>
+        <form action="login_action.php" method="POST">
+            <input type="password" name="password" placeholder="Entrez votre code d'accès">
             <button type="submit">Se connecter</button>
         </form>
     </section>
 
     <footer>
-        <a href="index.html">Retour à l'accueil</a> <!-- Lien vers la page d'accueil -->
-        <a href="calendar.html">Voir le calendrier</a> <!-- Lien vers la page calendrier -->
+        <a href="index.html">Retour à l'accueil</a>
     </footer>
-    <script src="script.js"></script>
+
+    <!-- Lier le fichier JavaScript -->
+    <script src="script.js"></script> <!-- Lien vers le fichier JS -->
 </body>
 </html>
