--- a/Hebdomadaire.html
+++ b/Hebdomadaire.html
@@ -3,66 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Compte Hebdomadaire</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body style="background-color: #121212; color: white; font-family: Arial, sans-serif;">
-    <header>
-        <h1>Compte Hebdomadaire ChronoDem</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html" style="color: #00bcd4;">Accueil</a></li>
-                <li><a href="login.html" style="color: #00bcd4;">Se connecter</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section>
-        <h2>Heures prestées et Montants</h2>
-        <!-- Exemple d'un tableau pour afficher les heures travaillées et les montants -->
-        <table>
-            <thead>
-                <tr>
-                    <th>Ouvrier</th>
-                    <th>Heures</th>
-                    <th>Montant</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>David</td>
-                    <td><input type="number" id="heures-david" value="0"></td>
-                    <td><span id="montant-david">0€</span></td>
-                </tr>
-                <!-- Ajoute plus de lignes selon les ouvriers -->
-            </tbody>
-        </table>
-
-        <button class="manage">Gérer</button>
-    </section>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compte Hebdomadaire ChronoDem</title>
-    <link rel="stylesheet" href="style.css">
-</head><link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!-- Lien vers le fichier CSS -->
+</head>
 <body>
     <header>
         <h1>Compte Hebdomadaire ChronoDem</h1>
     </header>
 
     <section>
-        <h2>Enregistrement des heures et montants</h2>
-        <p>Ici, tu pourras enregistrer les heures et montants des ouvriers sur une base hebdomadaire.</p>
+        <h2>Heures et Montant des Ouvriers</h2>
+        <p>Dans cette section, tu pourras entrer les heures et le montant que chaque ouvrier a presté.</p>
+        <!-- Ajoute ici un tableau ou formulaire pour saisir les informations -->
     </section>
 
     <footer>
         <a href="login.html">Se déconnecter</a>
     </footer>
-    <script src="script.js"></script>
+
+    <!-- Lier le fichier JavaScript -->
+    <script src="script.js"></script> <!-- Lien vers le fichier JS -->
 </body>
 </html>
