Page d'Accueil.html

--- a/Page d'Accueil.html
+++ b/Page d'Accueil.html
@@ -3,55 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChronoDem</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Page d'Accueil ChronoDem</title>
+    <link rel="stylesheet" href="style.css"> <!-- Lien vers le fichier CSS -->
 </head>
 <body>
     <header>
-        <h1 class="neon-text">Bienvenue sur ChronoDem</h1>
-        <nav>
-            <ul>
-                <li><a href="login.html" class="neon-link">Connexion</a></li>
-                <li><a href="calendar.html" class="neon-link">Calendrier</a></li>
-                <li><a href="account.html" class="neon-link">Compte Hebdomadaire</a></li>
-                <li><a href="client-info.html" class="neon-link">Informations Client</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section>
-        <p class="description">
-            Gérer efficacement vos projets avec ChronoDem. Suivez le calendrier de vos ouvriers, gérez les informations clients et bien plus.
-        </p>
-    </section>
-
-    <footer>
-        <p>© 2025 ChronoDem - Tous droits réservés</p>
-    </footer>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="fr">
-<head><link
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil ChronoDem</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header><link rel="stylesheet" href="style.css">
         <h1>Bienvenue sur ChronoDem</h1>
     </header>
 
     <section>
-        <h2>Pages disponibles :</h2>
+        <h2>Bienvenue sur la page d'accueil !</h2>
+        <p>Sur cette page, tu peux accéder à toutes les sections de ChronoDem.</p>
         <ul>
-            <li><a href="login.html">Page de connexion</a></li>
-            <li><a href="calendar.html">Calendrier</a></li>
-            <li><a href="hebdomadaire.html">Compte Hebdomadaire</a></li>
-            <li><a href="client-info.html">Informations Client</a></li>
+            <li><a href="Calendrier.html">Calendrier</a></li>
+            <li><a href="Hebdomadaire.html">Compte Hebdomadaire</a></li>
+            <li><a href="Information clients.html">Informations Clients</a></li>
         </ul>
     </section>
-    <script src="script.js"></script>
+
+    <footer>
+        <a href="login.html">Se déconnecter</a>
+    </footer>
+
+    <!-- Lier le fichier JavaScript -->
+    <script src="script.js"></script> <!-- Lien vers le fichier JS -->
 </body>
 </html>
